cmake_minimum_required(VERSION 3.25)
project(Khomichenko_exam)

set(CMAKE_CXX_STANDARD 17)

add_executable(Khomichenko_exam main.cpp City.cpp City.h Cities.cpp Cities.h Fraction.cpp Fraction.h DoubleList.cpp DoubleList.h DoubleSingleList.cpp DoubleSingleList.h DoubleCyclingList.cpp DoubleCyclingList.h)
